Add exports for modules to fix the compile-testing problems